# redd-archiver

./: NOTES.md  pyproject.toml  reddarc.py  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  REGISTRY_WORKFLOW.md  dependabot.yml  instances-example.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  performance_issue.md  register-instance.yml  submit-data-source.yml
.github/codeql/: codeql-config.yml
.github/scripts/: issue-to-registry.py
.github/workflows/: lint.yml  security.yml  test.yml
api/: routes.py
core/: incremental_processor.py  postgres_database.py  write_html.py
core/importers/: __init__.py  reddit_importer.py  ruqqus_importer.py  voat_importer.py
docker/search-server/: requirements.txt
html_modules/: css_minifier.py  dashboard_helpers.py  html_dashboard_jinja.py  html_pages_jinja.py  html_seo.py  html_statistics.py
monitoring/: performance_monitor.py  performance_timing.py
processing/: parallel_user_processing.py
tests/: conftest.py  test_api_routes.py  test_multiplatform_api_mcp.py  test_streaming_user_pages.py  validate_api.py
tools/: calculate_platform_metrics.py  find_banned_subreddits.py  generate_split_metadata.py  split_voat_by_subverse.py
tools/voat/: import_voat_comments.py  import_voat_filtered.py
