[project]
name = "redd-archiver"
version = "1.0.0"
description = "Redd Archiver - PostgreSQL-backed archive generator for Reddit, Voat, and Ruqqus - Transform data dumps into fully browsable static HTML websites with REST API and MCP server"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Unlicense"}
authors = [
    {name = "Redd-Archiver Contributors"}
]
keywords = [
    "reddit",
    "voat",
    "ruqqus",
    "archive",
    "html",
    "postgresql",
    "data-mining",
    "pushshift",
    "mcp",
    "rest-api",
    "static-site"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Framework :: Flask",
]

dependencies = [
    "psaw==0.1.0",
    "psutil==7.2.1",
    "zstandard==0.25.0",
    "psycopg[binary,pool]==3.3.2",
    "jinja2==3.1.6",
    "orjson==3.11.5",
    "rcssmin==1.2.2",
    "Pillow==10.4.0",
    "flask==3.1.2",
    "flask-limiter==3.12",
    "flask-wtf==1.2.2",
    "flask-cors==6.0.2",
    "sqlparse>=0.5.5",
    "playwright>=1.57.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "ruff==0.8.6",
    "pre-commit==4.5.1",
]

[project.urls]
Homepage = "https://github.com/19-84/redd-archiver"
Documentation = "https://github.com/19-84/redd-archiver#readme"
Repository = "https://github.com/19-84/redd-archiver"
Changelog = "https://github.com/19-84/redd-archiver/blob/main/CHANGELOG.md"
Issues = "https://github.com/19-84/redd-archiver/issues"
Demo = "https://online-archives.github.io/redd-archiver-example/"

[project.scripts]
reddarc = "reddarc:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "api", "html_modules", "processing", "utils"]
include = [
    "reddarc.py",
    "search_server.py",
    "templates_jinja2/**/*",
    "sql/**/*",
    "static/**/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/benchmarks/*",
    "*/.venv/*",
    "*/tools/*",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "S",   # flake8-bandit (security)
]
ignore = [
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # Allow assert in tests
"benchmarks/*" = ["S101"]  # Allow assert in benchmarks
"mcp_server/tests/*" = ["S101"]  # Allow assert in MCP tests
# Combined rules per file to avoid duplicates
"core/postgres_database.py" = ["E722", "S608", "S110", "N806", "F821", "B904", "B007"]  # Intentional patterns
"core/importers/__init__.py" = ["F401"]  # Imports used by submodules
"core/importers/voat_sql_parser.py" = ["E722", "S110"]  # Bare except for parser recovery
"core/importers/ruqqus_importer.py" = ["F401", "S603", "S607"]  # 7z subprocess calls
"core/watchful.py" = ["F401", "B904"]  # Availability check, custom exceptions
"core/write_html.py" = ["F811"]  # Function redefinition for compatibility
"html_modules/html_pages_jinja.py" = ["E722", "F821", "B904", "S112"]  # Bare except, try-except-continue
"html_modules/html_dashboard_jinja.py" = ["E722", "F821"]  # Bare except, dead code
"html_modules/dashboard_helpers.py" = ["F821"]  # Dead code - function never called
"html_modules/html_seo.py" = ["E722", "N806"]  # Bare except, constants
"html_modules/html_dashboard.py" = ["F821"]  # Forward reference in type hint
"monitoring/performance_monitor.py" = ["E722", "S110", "N806", "F821", "F811"]  # Monitoring patterns, function redef
"monitoring/system_optimizer.py" = ["E722", "S110", "B904", "S112"]  # Safe cleanup, try-except-continue
"processing/incremental_statistics.py" = ["E722", "S110"]  # Safe cleanup
"processing/batch_processing_utils.py" = ["E722", "S110"]  # Safe cleanup
"processing/parallel_user_processing.py" = ["E722", "S110"]  # Safe cleanup
"utils/console_output.py" = ["E722", "S105", "S108", "F821", "S110"]  # Bare except, examples, try-except-pass
"utils/regex_utils.py" = ["B904", "B034", "N818"]  # Custom exception patterns
"utils/search_operators.py" = ["N806"]  # MAX_QUERY_LENGTH constant
"api/routes.py" = ["S608", "N806"]  # Safe SQL, constants
"api/__init__.py" = ["E402", "F401"]  # Import after comment, routes used for side effects
".github/scripts/issue-to-registry.py" = ["S603", "S607"]  # Trusted gh CLI
"utils/error_handling.py" = ["F821"]  # Test code in __main__
"html_modules/html_constants.py" = ["E402"]  # Import after comment
"search_server.py" = ["E402", "N806", "S104"]  # App setup patterns
# Tools directory - scripts with relaxed rules
"tools/*" = ["S603", "S607", "S101", "S608", "S110", "B007", "E722", "F401", "B904", "F811", "S112", "N806", "S105", "S108"]
"scripts/*" = ["S603", "S607", "S608", "E722", "B904", "S112", "B007"]  # Scripts with subprocess/SQL/exceptions/loops
"tests/conftest.py" = ["F821", "S105"]  # Test fixtures, test secrets
"reddarc.py" = ["F821"]  # del statement for cleanup
